--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  </div>
 
  <div class="contents">
-<h4 class="section-title">一緒に働く（舐める）仲間を募集します</h4>
+   <h4 class="section-title">一緒に働く<span>（舐める）</span>仲間を募集します</h4>
 
 <div class="contents-item">
   <img src="sinus1.png">
